--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,4 +28,5 @@ add_executable(DomainFinder ${DIR}/domain_finder.cpp)
 add_executable(DuplicateDetector ${DIR}/duplicate_detector.cpp)
 add_executable(LinkRemover ${DIR}/link_remover.cpp)
 add_executable(Parser ${DIR}/parser.cpp)
+add_executable(FindOffset ${DIR}/findoffset.cpp)
 target_link_libraries(Parser PUBLIC HtmlParser)
